--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
     <head>
         <title>Monopoly</title>
-    </head
+    </head>
     <body>
         <h1>Hi</h1>
         
         <p>This is monopoly</p>
+		<p>This is a test</p>
+		
     </body>
 </html>
