--- a/index.html
+++ b/index.html
@@ -1,10 +1,74 @@
 <html>
     <head>
         <title>Monopoly</title>
-    </head
+        <link rel="stylesheet" type="text/css" href="stylesheet.css" media="all">
+    </head>
     <body>
-        <h1>Hi</h1>
-        
-        <p>This is monopoly</p>
+        <table>
+            <tr>
+                <td class="corner"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="corner"></td>
+            </tr>
+            
+            <tr>
+                <td class="horizontal"></td>
+                <td class="middle" colspan="9" rowspan="9"></td>
+                <td class="horizontal"></td>
+            </tr>
+            <tr>
+                <td class="horizontal"></td>
+                <td class="horizontal"></td>
+            </tr>
+            <tr>
+                <td class="horizontal"></td>
+                <td class="horizontal"></td>
+            </tr>
+            <tr>
+                <td class="horizontal"></td>
+                <td class="horizontal"></td>
+            </tr>
+            <tr>
+                <td class="horizontal"></td>
+                <td class="horizontal"></td>
+            </tr>
+            <tr>
+                <td class="horizontal"></td>
+                <td class="horizontal"></td>
+            </tr>
+            <tr>
+                <td class="horizontal"></td>
+                <td class="horizontal"></td>
+            </tr>
+            <tr>
+                <td class="horizontal"></td>
+                <td class="horizontal"></td>
+            </tr>
+            <tr>
+                <td class="horizontal"></td>
+                <td class="horizontal"></td>
+            </tr>
+            <tr>
+                <td class="corner"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="vertical"></td>
+                <td class="corner"></td>
+            </tr>
+        </table>
     </body>
 </html>
