started adding tile colors

--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <html>
     <head>
         <title>Monopoly</title>
-<<<<<<< HEAD
         <link rel="stylesheet" type="text/css" href="stylesheet.css" media="all">
     </head>
     <body>
         <table>
             <tr>
-                <td class="corner"></td>
+                <td class="corner go">GO!</td>
+                <td class="vertical"><div class="topspace"></div><div class="brown"></div></td>
+                <td class="vertical"></td>
+                <td class="vertical"><div class="topspace"></div><div class="brown"></div></td>
                 <td class="vertical"></td>
                 <td class="vertical"></td>
+                <td class="vertical"><div class="topspace"></div><div class="lightblue"></div></td>
                 <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="corner"></td>
+                <td class="vertical"><div class="topspace"></div><div class="lightblue"></div></td>
+                <td class="vertical"><div class="topspace"></div><div class="lightblue"></div></td>
+                <td class="corner">Academic Probation</td>
             </tr>
             
             <tr>
-                <td class="horizontal"></td>
+                <td class="horizontal"><div class="leftspace"></div><div class="blue"></td>
                 <td class="middle" colspan="9" rowspan="9"></td>
                 <td class="horizontal"></td>
             </tr>
@@ -30,11 +29,7 @@
                 <td class="horizontal"></td>
             </tr>
             <tr>
-                <td class="horizontal"></td>
-                <td class="horizontal"></td>
-            </tr>
-            <tr>
-                <td class="horizontal"></td>
+                <td class="horizontal"><div class="leftspace"></div><div class="blue"></td>
                 <td class="horizontal"></td>
             </tr>
             <tr>
@@ -46,15 +41,19 @@
                 <td class="horizontal"></td>
             </tr>
             <tr>
-                <td class="horizontal"></td>
-                <td class="horizontal"></td>
-            </tr>
-            <tr>
-                <td class="horizontal"></td>
+                <td class="horizontal"><div class="leftspace"></div><div class="green"></td>
                 <td class="horizontal"></td>
             </tr>
             <tr>
                 <td class="horizontal"></td>
+                <td class="horizontal"></td>
+            </tr>
+            <tr>
+                <td class="horizontal"><div class="leftspace"></div><div class="green"></td>
+                <td class="horizontal"></td>
+            </tr>
+            <tr>
+                <td class="horizontal"><div class="leftspace"></div><div class="green"></td>
                 <td class="horizontal"></td>
             </tr>
             <tr>
