finished adding colors

--- a/index.html
+++ b/index.html
@@ -16,58 +16,58 @@
                 <td class="vertical"></td>
                 <td class="vertical"><div class="topspace"></div><div class="lightblue"></div></td>
                 <td class="vertical"><div class="topspace"></div><div class="lightblue"></div></td>
-                <td class="corner">Academic Probation</td>
+                <td class="corner jail">Academic Probation</td>
             </tr>
             
             <tr>
-                <td class="horizontal"><div class="leftspace"></div><div class="blue"></td>
-                <td class="middle" colspan="9" rowspan="9"></td>
-                <td class="horizontal"></td>
+                <td class="horizontal"><div class="leftspace"></div><div class="blue"></div></td>
+                <td class="middle" id="panther" colspan="9" rowspan="9"><img src="panther.png"/></td>
+                <td class="horizontal"><div class="rightspace"></div><div class="purple"></div></td>
             </tr>
             <tr>
                 <td class="horizontal"></td>
                 <td class="horizontal"></td>
             </tr>
             <tr>
-                <td class="horizontal"><div class="leftspace"></div><div class="blue"></td>
+                <td class="horizontal"><div class="leftspace"></div><div class="blue"></div></td>
+                <td class="horizontal"><div class="rightspace"></div><div class="purple"></div></td>
+            </tr>
+            <tr>
                 <td class="horizontal"></td>
+                <td class="horizontal"><div class="rightspace"></div><div class="purple"></div></td>
             </tr>
             <tr>
                 <td class="horizontal"></td>
                 <td class="horizontal"></td>
             </tr>
             <tr>
-                <td class="horizontal"></td>
-                <td class="horizontal"></td>
-            </tr>
-            <tr>
-                <td class="horizontal"><div class="leftspace"></div><div class="green"></td>
-                <td class="horizontal"></td>
+                <td class="horizontal"><div class="leftspace"></div><div class="green"></div></td>
+                <td class="horizontal"><div class="rightspace"></div><div class="orange"></div></td>
             </tr>
             <tr>
                 <td class="horizontal"></td>
                 <td class="horizontal"></td>
             </tr>
             <tr>
-                <td class="horizontal"><div class="leftspace"></div><div class="green"></td>
-                <td class="horizontal"></td>
+                <td class="horizontal"><div class="leftspace"></div><div class="green"></div></td>
+                <td class="horizontal"><div class="rightspace"></div><div class="orange"></div></td>
             </tr>
             <tr>
-                <td class="horizontal"><div class="leftspace"></div><div class="green"></td>
-                <td class="horizontal"></td>
+                <td class="horizontal"><div class="leftspace"></div><div class="green"></div></td>
+                <td class="horizontal"><div class="rightspace"></div><div class="orange"></div></td>
             </tr>
             <tr>
-                <td class="corner"></td>
+                <td class="corner tojail">Go To Probation</td>
+                <td class="vertical"><div class="yellow"></div><div class="topspace"></div></td>
                 <td class="vertical"></td>
+                <td class="vertical"><div class="yellow"></div><div class="topspace"></div></td>
+                <td class="vertical"><div class="yellow"></div><div class="topspace"></div></td>
                 <td class="vertical"></td>
+                <td class="vertical"><div class="red"></div><div class="topspace"></div></td>
+                <td class="vertical"><div class="red"></div><div class="topspace"></div></td>
                 <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="corner"></td>
+                <td class="vertical"><div class="red"></div><div class="topspace"></div></td>
+                <td class="corner freeparking">Free Pizza</td>
             </tr>
         </table>
 
