--- a/index.html
+++ b/index.html
@@ -7,66 +7,66 @@
         <table>
             <tr>
                 <td class="corner go">GO!</td>
-                <td class="vertical"><div class="topspace"></div><div class="brown"></div></td>
-                <td class="vertical"></td>
-                <td class="vertical"><div class="topspace"></div><div class="brown"></div></td>
-                <td class="vertical"></td>
-                <td class="vertical"></td>
-                <td class="vertical"><div class="topspace"></div><div class="lightblue"></div></td>
-                <td class="vertical"></td>
-                <td class="vertical"><div class="topspace"></div><div class="lightblue"></div></td>
-                <td class="vertical"><div class="topspace"></div><div class="lightblue"></div></td>
+                <td class="top"><div class="space">test</div><div class="brown"></div></td>
+                <td class="top"></td>
+                <td class="top"><div class="space"></div><div class="brown"></div></td>
+                <td class="top"></td>
+                <td class="top"></td>
+                <td class="top"><div class="space"></div><div class="lightblue"></div></td>
+                <td class="top"></td>
+                <td class="top"><div class="space"></div><div class="lightblue"></div></td>
+                <td class="top"><div class="space"></div><div class="lightblue"></div></td>
                 <td class="corner jail">Academic Probation</td>
             </tr>
             
             <tr>
-                <td class="horizontal"><div class="leftspace"></div><div class="blue"></div></td>
+                <td class="left"><div class="leftspace">test</div><div class="blue"></div></td>
                 <td class="middle" id="panther" colspan="9" rowspan="9"><img src="panther.png"/></td>
-                <td class="horizontal"><div class="rightspace"></div><div class="purple"></div></td>
+                <td class="right"><div class="rightspace">test</div><div class="purple"></div></td>
             </tr>
             <tr>
-                <td class="horizontal"></td>
-                <td class="horizontal"></td>
+                <td class="left"></td>
+                <td class="right"></td>
             </tr>
             <tr>
-                <td class="horizontal"><div class="leftspace"></div><div class="blue"></div></td>
-                <td class="horizontal"><div class="rightspace"></div><div class="purple"></div></td>
+                <td class="left"><div class="leftspace"></div><div class="blue"></div></td>
+                <td class="right"><div class="rightspace"></div><div class="purple"></div></td>
             </tr>
             <tr>
-                <td class="horizontal"></td>
-                <td class="horizontal"><div class="rightspace"></div><div class="purple"></div></td>
+                <td class="left"></td>
+                <td class="right"><div class="rightspace"></div><div class="purple"></div></td>
             </tr>
             <tr>
-                <td class="horizontal"></td>
-                <td class="horizontal"></td>
+                <td class="left"></td>
+                <td class="right"></td>
             </tr>
             <tr>
-                <td class="horizontal"><div class="leftspace"></div><div class="green"></div></td>
-                <td class="horizontal"><div class="rightspace"></div><div class="orange"></div></td>
+                <td class="left"><div class="leftspace"></div><div class="green"></div></td>
+                <td class="right"><div class="rightspace"></div><div class="orange"></div></td>
             </tr>
             <tr>
-                <td class="horizontal"></td>
-                <td class="horizontal"></td>
+                <td class="left"></td>
+                <td class="right"></td>
             </tr>
             <tr>
-                <td class="horizontal"><div class="leftspace"></div><div class="green"></div></td>
-                <td class="horizontal"><div class="rightspace"></div><div class="orange"></div></td>
+                <td class="left"><div class="leftspace"></div><div class="green"></div></td>
+                <td class="right"><div class="rightspace"></div><div class="orange"></div></td>
             </tr>
             <tr>
-                <td class="horizontal"><div class="leftspace"></div><div class="green"></div></td>
-                <td class="horizontal"><div class="rightspace"></div><div class="orange"></div></td>
+                <td class="left"><div class="leftspace"></div><div class="green"></div></td>
+                <td class="right"><div class="rightspace"></div><div class="orange"></div></td>
             </tr>
             <tr>
                 <td class="corner tojail">Go To Probation</td>
-                <td class="vertical"><div class="yellow"></div><div class="topspace"></div></td>
-                <td class="vertical"></td>
-                <td class="vertical"><div class="yellow"></div><div class="topspace"></div></td>
-                <td class="vertical"><div class="yellow"></div><div class="topspace"></div></td>
-                <td class="vertical"></td>
-                <td class="vertical"><div class="red"></div><div class="topspace"></div></td>
-                <td class="vertical"><div class="red"></div><div class="topspace"></div></td>
-                <td class="vertical"></td>
-                <td class="vertical"><div class="red"></div><div class="topspace"></div></td>
+                <td class="bottom"><div class="yellow"></div><div class="space">test</div></td>
+                <td class="bottom"></td>
+                <td class="bottom"><div class="yellow"></div><div class="space"></div></td>
+                <td class="bottom"><div class="yellow"></div><div class="space"></div></td>
+                <td class="bottom"></td>
+                <td class="bottom"><div class="red"></div><div class="space"></div></td>
+                <td class="bottom"><div class="red"></div><div class="space"></div></td>
+                <td class="bottom"></td>
+                <td class="bottom"><div class="red"></div><div class="space"></div></td>
                 <td class="corner freeparking">Free Pizza</td>
             </tr>
         </table>
