--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<div class="blue"></div>
 				</td>
                 <td class="middle" id="panther" colspan="9" rowspan="9">
-					<img src="panther.png"/>
+					<img id="logo" src="gsumonopoly.png"/>
 				</td>
                 <td class="right">
 					<div class="rightspace">
