fixed text padding on sides

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					<img src="panther.png"/>
 				</td>
                 <td class="right">
-					<div class="rightspace">
+					<div class="rightspace textcenterright10">
 						<h4>The Annex</h4>
 						<h5>$140</h5>
 					</div>
@@ -92,14 +92,14 @@
             </tr>
             <tr>
                 <td class="left">
-					<div class="leftspace">
+					<div class="leftspace textcenterleft">
 						<h4>Fountain</h4>
 						<h5>$350</h5>
 					</div>
 					<div class="blue"></div>
 				</td>
                 <td class="right">
-					<div class="rightspace">
+					<div class="rightspace textcenterright30">
 						<h4>NSC</h4>
 						<h5>$140</h5>
 					</div>
@@ -112,7 +112,7 @@
 					<h1>?</h1>
 				</td>
                 <td class="right">
-					<div class="rightspace">
+					<div class="rightspace textcenterright30">
 						<h4>Petit</h4>
 						<h5>$160</h5>
 					</div>
@@ -131,14 +131,14 @@
             </tr>
             <tr>
                 <td class="left">
-					<div class="leftspace">
+					<div class="leftspace textcenterleft">
 						<h4>M Deck</h4>
 						<h5>$320</h5>
 					</div>
 					<div class="green"></div>
 				</td>
                 <td class="right">
-					<div class="rightspace">
+					<div class="rightspace textcenterright20">
 						<h4>Langdale</h4>
 						<h5>$180</h5>
 					</div>
@@ -157,14 +157,14 @@
             </tr>
             <tr>
                 <td class="left">
-					<div class="leftspace">
+					<div class="leftspace textcenterleft">
 						<h4>T Deck</h4>
 						<h5>$300</h5>
 					</div>
 					<div class="green"></div>
 				</td>
                 <td class="right">
-					<div class="rightspace">
+					<div class="rightspace textcenterright10">
 						<h4>Sparks Hall</h4>
 						<h5>$180</h5>
 					</div>
@@ -173,14 +173,14 @@
             </tr>
             <tr>
                 <td class="left">
-					<div class="leftspace">
+					<div class="leftspace textcenterleft">
 						<h4>G Deck</h4>
 						<h5>$300</h5>
 					</div>
 					<div class="green"></div>
 				</td>
                 <td class="right">
-					<div class="rightspace">
+					<div class="rightspace textcenterright20">
 						<h4>Aderhold</h4>
 						<h5>$200</h5>
 					</div>
@@ -191,7 +191,7 @@
                 <td class="corner tojail">Go To Probation</td>
                 <td class="bottom">
 					<div class="yellow"></div>
-					<div class="bottomspace">
+					<div class="bottomspace textcenterbottom">
 						<h4>Central</h4>
 						<h5>$280</h5>
 					</div>
@@ -202,14 +202,14 @@
 				</td>
                 <td class="bottom">
 					<div class="yellow"></div>
-					<div class="bottomspace">
+					<div class="bottomspace textcenterbottom">
 						<h4>Commons</h4>
 						<h5>$260</h5>
 					</div>
 				</td>
                 <td class="bottom">
 					<div class="yellow"></div>
-					<div class="bottomspace">
+					<div class="bottomspace textcenterbottom">
 						<h4>Greeks</h4>
 						<h5>$260</h5>
 					</div>
@@ -220,14 +220,14 @@
 				</td>
                 <td class="bottom">
 					<div class="red"></div>
-					<div class="bottomspace">
+					<div class="bottomspace textcenterbottom">
 						<h4>Lofts</h4>
 						<h5>$240</h5>
 					</div>
 				</td>
                 <td class="bottom">
 					<div class="red"></div>
-					<div class="bottomspace">
+					<div class="bottomspace textcenterbottom">
 						<h4>Patton</h4>
 						<h5>$220</h5>
 					</div>
@@ -238,7 +238,7 @@
 				</td>
                 <td class="bottom">
 					<div class="red"></div>
-					<div class="bottomspace">
+					<div class="bottomspace textcenterbottom">
 						<h4>Piedmont</h4>
 						<h5>$220</h5>
 					</div>
