updated side padding

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             
             <tr>
                 <td class="left">
-					<div class="leftspace">
-						<h4>Pounce Statue</h4>
+					<div class="leftspace textcenterleft">
+						<h4>Pounce</h4>
 						<h5>$400</h5>
 					</div>
 					<div class="blue"></div>
@@ -74,7 +74,7 @@
 				</td>
                 <td class="right">
 					<div class="rightspace textcenterright10">
-						<h4>The Annex</h4>
+						<h4>Annex</h4>
 						<h5>$140</h5>
 					</div>
 					<div class="purple"></div>
@@ -165,7 +165,7 @@
 				</td>
                 <td class="right">
 					<div class="rightspace textcenterright10">
-						<h4>Sparks Hall</h4>
+						<h4>Sparks</h4>
 						<h5>$180</h5>
 					</div>
 					<div class="orange"></div>
