added chance/community cards

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
 					<div class="blue"></div>
 				</td>
                 <td class="middle" id="panther" colspan="9" rowspan="9">
+					<img id="exams" src="exams_cards.png"/>
 					<img id="logo" src="gsumonopoly.png"/>
+					<img id="credit" src="extra_credit_cards.png"/>
 				</td>
                 <td class="right">
 					<div class="rightspace textcenterright10">
