fixed css/html validation stuff

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE HTML>
 <html>
     <head>
         <title>Monopoly</title>
@@ -70,9 +71,9 @@
 					<div class="blue"></div>
 				</td>
                 <td class="middle" id="panther" colspan="9" rowspan="9">
-					<img id="exams" src="exams_cards.png"/>
-					<img id="logo" src="gsumonopoly.png"/>
-					<img id="credit" src="extra_credit_cards.png"/>
+					<img id="exams" alt="exams cards" src="exams_cards.png"/>
+					<img id="logo" alt="monopoly logo" src="gsumonopoly.png"/>
+					<img id="credit" alt="extra credit cards" src="extra_credit_cards.png"/>
 				</td>
                 <td class="right">
 					<div class="rightspace textcenterright10">
