still bad at git

--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                 <td class="corner freeparking">Free Pizza</td>
             </tr>
         </table>
+        <a href="stage2.html">Next Stage --></a>
 
     </body>
 </html>
