Added players and player table

--- a/stage2.html
+++ b/stage2.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css" media="all">
     </head>
     <body>
-        <table>
+        <table id="board">
             <tr>
                 <td class="corner go">GO!</td>
                 <td class="top">
@@ -38,6 +38,7 @@
 					<div class="topspace">
 						<h4>Rec Center</h4>
 						<h5>$100</h5>
+                        <img class ="piece" src="hat.png">
 					</div>
 					<div class="lightblue"></div>
 				</td>
@@ -49,6 +50,7 @@
 					<div class="topspace">
 						<h4>Student Center</h4>
 						<h5>$100</h5>
+                        <img class ="piece" src="car.png">
 					</div>
 					<div class="lightblue"></div>
 				</td>
@@ -247,6 +249,28 @@
 					</div>
 				</td>
                 <td class="corner freeparking">Free Pizza</td>
+            </tr>
+        </table>
+        <br/>
+        <table id="players">
+            <tr>
+                <th></th>
+                <th>Player 1 <img class ="piece" src="car.png"></th>
+                <th>Player 2 <img class ="piece" src="hat.png"></th>
+            </tr>
+            <tr>
+                <th>Money</th>
+                <td>$5000</td>
+                <td>$500</td>
+            </tr>
+            <tr>
+                <th>Properties</th>
+                <td>
+                    <ul>
+                    <li>Woodruff Park</li>
+                    </ul>
+                </td>
+                <td>None</td>
             </tr>
         </table>
         <a href="index.html"><--Previous Stage</a>
