--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css" media="all">
     </head>
     <body>
-        <table>
+        <table id="board">
             <tr>
-                <td class="corner go">GO!</td>
+                <td class="corner go">GO!<img class ="piece" src="car.png"> <img class ="piece" src="hat.png"></td>
                 <td class="top">
 					<div class="topspace">
 						<h4>Hurt Park</h4>
@@ -23,6 +23,7 @@
 					<div class="topspace">
 						<h4>Woodruff Park</h4>
 						<h5>$80</h5>
+                        
 					</div>
 					<div class="brown"></div>
 				</td>
@@ -49,6 +50,7 @@
 					<div class="topspace">
 						<h4>Student Center</h4>
 						<h5>$100</h5>
+                        
 					</div>
 					<div class="lightblue"></div>
 				</td>
@@ -247,6 +249,24 @@
 					</div>
 				</td>
                 <td class="corner freeparking">Free Pizza</td>
+            </tr>
+        </table>
+        <br/>
+        <table id="players">
+            <tr>
+                <th></th>
+                <th>Player 1 <img class ="piece" src="car.png"></th>
+                <th>Player 2 <img class ="piece" src="car.png"></th>
+            </tr>
+            <tr>
+                <th>Money</th>
+                <td>$1500</td>
+                <td>$1500</td>
+            </tr>
+            <tr>
+                <th>Properties</th>
+                <td>None</td>
+                <td>None</td>
             </tr>
         </table>
         <a href="stage2.html">Next Stage --></a>
