fixed validation errors

--- a/stage2.html
+++ b/stage2.html
@@ -38,7 +38,7 @@
 					<div class="topspace">
 						<h4>Rec Center</h4>
 						<h5>$100</h5>
-                        <img class ="piece" src="hat.png">
+                        <img class="piece" alt="hat" src="hat.png">
 					</div>
 					<div class="lightblue"></div>
 				</td>
@@ -50,7 +50,7 @@
 					<div class="topspace">
 						<h4>Student Center</h4>
 						<h5>$100</h5>
-                        <img class ="piece" src="car.png">
+                        <img class="piece" alt="car" src="car.png">
 					</div>
 					<div class="lightblue"></div>
 				</td>
@@ -255,8 +255,8 @@
         <table id="players">
             <tr>
                 <th></th>
-                <th>Player 1 <img class ="piece" src="car.png"></th>
-                <th>Player 2 <img class ="piece" src="hat.png"></th>
+                <th>Player 1 <img class="piece" alt="car" src="car.png"></th>
+                <th>Player 2 <img class="piece" alt="hat" src="hat.png"></th>
             </tr>
             <tr>
                 <th>Money</th>
@@ -273,7 +273,7 @@
                 <td>None</td>
             </tr>
         </table>
-        <a href="index.html"><--Previous Stage</a>
+        <a href="index.html">&lt;--Previous Stage</a>
         <a href="stage3.html">Next Stage --></a>
     </body>
 </html>
