--- a/stage3.html
+++ b/stage3.html
@@ -59,7 +59,7 @@
 					</div>
 					<div class="lightblue"></div>
 				</td>
-                <td class="corner jail">Academic Probation <img class ="piece" src="hat.png"></td>
+                <td class="corner jail">Academic Probation <img class="piece" alt="hat" src="hat.png"></td>
             </tr>
             
             <tr>
@@ -179,7 +179,7 @@
 					<div class="leftspace textcenterleft">
 						<h4>G Deck</h4>
 						<h5>$300</h5>
-                        <img class ="piece" src="car.png">
+                        <img class="piece" alt="car" src="car.png">
 					</div>
 					<div class="green"></div>
 				</td>
@@ -254,8 +254,8 @@
         <table id="players">
             <tr>
                 <th></th>
-                <th>Player 1 <img class ="piece" src="car.png"></th>
-                <th>Player 2 <img class ="piece" src="hat.png"></th>
+                <th>Player 1 <img class="piece" alt="car" src="car.png"></th>
+                <th>Player 2 <img class="piece" alt="hat" src="hat.png"></th>
             </tr>
             <tr>
                 <th>Money</th>
@@ -280,7 +280,7 @@
                 </td>
             </tr>
         </table>
-        <a href="stage2.html"><--Previous Stage</a>
+        <a href="stage2.html">&lt;--Previous Stage</a>
 
     </body>
 </html>
