--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table id="board">
             <tr>
-                <td class="corner go">GO!<img class ="piece" src="car.png"> <img class ="piece" src="hat.png"></td>
+                <td class="corner go">GO!<img class="piece" alt="car" src="car.png"> <img class="piece" alt="hat" src="hat.png"></td>
                 <td class="top">
 					<div class="topspace">
 						<h4>Hurt Park</h4>
@@ -255,8 +255,8 @@
         <table id="players">
             <tr>
                 <th></th>
-                <th>Player 1 <img class ="piece" src="car.png"></th>
-                <th>Player 2 <img class ="piece" src="car.png"></th>
+                <th>Player 1 <img class ="piece" alt="car" src="car.png"></th>
+                <th>Player 2 <img class ="piece" alt="hat" src="hat.png"></th>
             </tr>
             <tr>
                 <th>Money</th>
